# lccrf

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  FWBW.cpp  FWBW.h  LCCRF.cpp  LCCRF.h  LCCRF.sln  LCCRF.vcxproj  LCCRF.vcxproj.filters  Makefile  README.md  SGD.h
LCCRF/: CMakeLists.txt  Document.h  FWBW.cpp  FWBW.h  FeatureManager.cpp  FeatureManager.h  Featurizer.cpp  Featurizer.h  IDAllocator.cpp  IDAllocator.h  LCCRF.cpp  LCCRF.h  LCCRF.sln  LCCRF.vcxproj  LCCRF.vcxproj.filters  LCCRFPy.cpp  LCCRFPy.pyx  Log.h  Makefile  MultiArray.h  MurmurHash3.cpp  MurmurHash3.h  NGramFeaturizer.cpp  NGramFeaturizer.h  SGD.cpp  SGD.h  SGDL1.cpp  SGDL1.h  Setup.py  TransitionFeaturizer.cpp  TransitionFeaturizer.h  Types.cpp  Types.h  Utils.h  Viterbi.cpp  Viterbi.h  main.cpp
LCCRF/TestLCCRF/: Test.vcxproj  Test.vcxproj.filters  TestFWBW.cpp  TestLCCRF.cpp
LCCRF/TestLCCRF/TestCFGParser/: TestCFGParser.cpp
LCCRF/TestPerf/: TestPerf.cpp  TestPerf.vcxproj
LCCRF/console/: console.vcxproj  console.vcxproj.filters  main.cpp
LCCRF/lib/: CFGParser.cpp  CFGParser.h  FWBW.cpp  FWBW.h  LCCRF.cpp  LCCRF.h  Log.h  SGDL1.cpp  Str.h  Types.cpp  Types.h  Viterbi.h  lib.vcxproj  lib.vcxproj.filters
LCCRFPy/: AnyFeaturizer.py  CRFTagger.py  CRFTaggerFeaturizer.py  FeaturizerManager.py  LCCRFPy.cpp  LCCRFPy.pyx  Makefile  NGramFeaturizer.py  NGramVectorizer.py  Setup.py  TransitionVectorizer.py  VectorizerManager.py  XNGramFeaturizer.py  log.py
Py/: LCCRFPy.cpp  LCCRFPy.pyx  NGramVectorizer.py  Setup.py  Test.py  TestNGramVectorizer.py  TestVectorizerManager.py  TransitionVectorizer.py  Vectorizer.py  VectorizerManager.py
Test/: Test.vcxproj  Test.vcxproj.filters  TestLCCRF.cpp  TestNGramFeaturizer.cpp  TestSGD.cpp
TestLCCRF/: Test.vcxproj  Test.vcxproj.filters  TestLCCRF.cpp
TestLCCRFPy/: Makefile  TestAccurancy.py  TestCRFTagger.py  TestLCCRFPy.py  TestNGramVectorizer.py  TestVectorizerManager.py
Tests/CrfSuite/: GenDataForCrfSuite.py  GenFeatureByCrfSuite.sh  chunking.py  chunking_bigram.py  chunking_unigram.py  features.crfsuite.tsv  input.crfsuite.tsv
Tests/TestLCCRF/: Test.vcxproj  Test.vcxproj.filters  TestFWBW.cpp  TestLCCRF.cpp
Tests/TestLCCRFPy/: Makefile  TestCRFTagger.py  TestFeaturizerManager.py  TestLCCRFPy.py  TestNGramFeaturizer.py  TestNGramVectorizer.py  TestVectorizerManager.py
Tests/TestLCCRFPy/Data/: train.tsv
Tests/TestLCCRFPy/TestCRFTagger/: TestCRFTagger.py  train.tsv
Tests/TestLCCRFPy/TestCRFTaggerFeaturizer/: TestCRFTaggerFeaturizer.py
Tests/TestLCCRFPy/TestFeaturizer/: TestCRFTaggerFeaturizer.py  TestLCCRFFeaturizer.py  TestNGramFeaturizer.py  cfg.xml  pipeline.txt  query.txt
Tests/TestLCCRFPy/TestNGramFeaturizer/: NGramFeaturizer.py  TestNGramFeaturizer.py  ngram.txt
Tests/TestLCCRFPy/data/: testset.tsv
Tests/TestPerf/: TestPerf.cpp  TestPerf.vcxproj
c/: LCCRF.sln  Makefile
c/TestLCCRF/: Test.vcxproj  Test.vcxproj.filters  TestFWBW.cpp  TestLCCRF.cpp  TestMain.cpp  TestSGD.cpp  lccrf.weights.txt
c/TestLCCRF/TestCFGParser/: TestCFGParser.cpp
c/TestLCCRF/gtest/: gtest.lib
c/TestPerf/: TestPerf.cpp  TestPerf.vcxproj
c/console/: console.vcxproj  console.vcxproj.filters
c/lib/: CFGParser.cpp  CFGParser.h  FWBW.cpp  FWBW.h  LCCRF.cpp  LCCRF.h  Log.h  MultiArray.h  SGDL1.cpp  SGDL1.h  Types.cpp  Types.h  Viterbi.cpp  Viterbi.h  lib.vcxproj  lib.vcxproj.filters
cmake/: arm64-android.cmake  x64-linux.cmake  x64-windows.cmake
console/: console.vcxproj  main.cpp
examples/datetime/: clean_data.py  collect_data.sh  decode.py  prepare_data.sh  retag.py  train.py
examples/datetime/model/: 1gram.txt  3gram.txt  cfg.grammar.xml  lccrf.pipeline.outputs.txt  lccrf.pipeline.txt  lccrf.tags.txt
lccrf/: CMakeLists.txt  cfg_parser.cpp  cfg_parser.h  decoder.cpp  decoder.h  evaluator.cpp  evaluator.h  features.h  fwbw.cpp  fwbw.h  hash.cpp  lccrf.cpp  lccrf.h  perceptron.cpp  perceptron.h  query.h  sgdl1.cpp  sgdl1.h  types.h  viterbi.cpp  viterbi.h
libc/: LCCRF.sln
libc/TestLCCRF/: TestLCCRF.cpp
libc/TestLCCRF/TestCFGParser/: TestCFGParser.cpp  en-us.datetime.grammar.xml
libc/TestLCCRF/gtest/: gtest.lib
libc/TestPerf/: TestPerf.vcxproj.filters
libc/console/: console.vcxproj  main.cpp
libc/lib/: CFGParser.cpp  CFGParser.h  LCCRF.cpp  ReadMe.txt  SGDL1.h  Str.h  Viterbi.cpp  lib.vcxproj
py/: CFGFeaturizer.py  CRFTagger.py  FeatureShifter.py  LCCRFFeaturizer.py  LCCRFPy.cpp  LCCRFPy.pyx  NGramFeaturizer.py  Setup.py  install.sh
src/: LCCRF.sln
src/TestLib/: TestFWBW.cpp  TestLCCRF.cpp  TestLib.vcxproj
src/TestPerf/: TestPerf.vcxproj
src/lib/: FWBW.cpp  FWBW.h  LCCRF.cpp  LCCRF.h  Log.h  MultiArray.h  ReadMe.txt  SGDL1.cpp  SGDL1.h  Str.h  Types.h  lib.vcxproj  packages.config
superbuild/: CMakeLists.txt
superbuild/boost/: BoostDetectToolset-android-clang.patch  CMakeLists.txt
superbuild/gtest/: CMakeLists.txt
superbuild/spdlog/: CMakeLists.txt
tests/: CMakeLists.txt  convert_data.py  test_fwbw.cpp  test_lccrf.cpp  test_perceptron.cpp  test_perf.cpp
tests/test_perf/: test_perf.cpp
